[#80500396] Added ID's to validation form-group div's in smart answers so jump link work correctly

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -12,14 +12,6 @@
 @import '_device-pixels';
 @import '_font_stack';
 
-/* Global header ========================================================== */
-
-.header_text {
-  @include bold-24;
-  padding-top:5px;
-  padding-left:15px;
-  color: rgb(255, 255, 255);
-}
 
 /* Header bar ========================================================== */
 
